--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -22,11 +22,11 @@ jobs:
             target: ramips
             subtarget: mt7621
             vermagic: "9c242f353867f49a96054ff8c9f2c460"
-          - tag: "23.05.2"
-            pkgarch: mipsel_24kc
-            target: ramips
-            subtarget: mt7621
-            vermagic: "9c242f353867f49a96054ff8c9f2c460"
+          - tag: "23.05.5"
+            pkgarch: mips_24kc
+            target: ath79
+            subtarget: generic
+            vermagic: "9b3937516a7cf2084779c45452527b12"
 
     steps:
       - uses: actions/checkout@v4
